add receipt with multi values
